<resources>
    <string name="app_name">provalez2</string>
    <string name="ciao">ciao</string>
    <string name="inserisci_i_tuoi_dati">Inserisci i tuoi dati</string>
    <string name="nome">Nome:</string>
    <string name="es_paolo">es: Paolo</string>
    <string name="cognome">Cognome:</string>
    <string name="es_bianchi">es: Bianchi</string>
    <string name="data_di_nascita">Data di Nascita:</string>
    <string name="es_01_01_1990">es:01/01/1990</string>
    <string name="indirizzo">Indirizzo:</string>
    <string name="es_via_dei_boschi_n_188">es:Via dei Boschi n. 188</string>
    <string name="et">Età:</string>
    <string name="_1">1</string>
    <string name="_100">100</string>
    <string name="inserisci">Inserisci</string>
    <string name="indirizzo2">Indirizzo</string>
    <string name="et2">Età</string>
    <string name="cap">CAP:</string>
    <string name="es_09097">es: 09097</string>
    <string name="errore">Si è verificato un errore</string>
    <string name="pulisci_i_campi">Pulisci i campi</string>
    <string name="alert_dialog_ok">Alert dialog ok</string>
    <string name="alert_dialog_cancel">alert dialog no</string>
    <string name="es_pippo_hotmail_com">es: pippo@hotmail.com</string>
    <string name="email">Email:</string>


</resources>