<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dati Inseriti"
        android:textSize="35sp"

        android:textAllCaps="false"
        />
    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CONFERMA"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_below="@+id/title"


        />

    <TextView
        android:id="@+id/nomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="35sp"
        android:layout_below="@+id/confirm"
        />
    <TextView
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_below="@+id/nomeText"
        />
    <TextView
        android:id="@+id/cognomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cognome"
        android:textSize="35sp"
        android:layout_below="@+id/nome"
        />
    <TextView
        android:id="@+id/cognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_below="@+id/cognomeText"
        />
    <TextView
        android:id="@+id/dataNascitaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_di_nascita"
        android:textSize="35sp"
        android:layout_below="@+id/cognome"
        />
    <TextView
        android:id="@+id/dataNascita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_below="@+id/dataNascitaText"
        />
    <TextView
        android:id="@+id/indirizzoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indirizzo2"
        android:textSize="35sp"
        android:layout_below="@+id/dataNascita"
        />
    <TextView
        android:id="@+id/indirizzo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_below="@+id/indirizzoText"
        />
    <TextView
        android:id="@+id/etaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et2"
        android:textSize="35sp"
        android:layout_below="@+id/indirizzo"
        />
    <TextView
        android:id="@+id/eta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_below="@+id/etaText"
        />
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eta"
        android:backgroundTint="#abcdef"
        android:text="Back"
        android:textAllCaps="false"
        android:textColor="#fedcba"
        android:textSize="27sp"

        />
</RelativeLayout>